--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -42,7 +42,7 @@
   year={2017},
   title = {SOCKET(2) Linux Programmer's Manual},
   edition= {4.15},
-  url={http://man7.org/linux/man-pages/man2/socket.2.html}
+  url = {http://man7.org/linux/man-pages/man2/socket.2.html},
 }
 
 @ARTICLE{beej,
@@ -153,13 +153,6 @@
   url = {http://man7.org/linux/man-pages/man2/semctl.2.html},
 }
 
-@MANUAL{socket,
-  year={2017},
-  title = {SOCKET(2) Linux Programmer's Manual},
-  edition= {4.15},
-  url = {http://man7.org/linux/man-pages/man2/socket.2.html},
-}
-
 @MANUAL{sigaction,
   year={2017},
   title = {SIGACTION(2) Linux Programmer's Manual},
@@ -172,4 +165,10 @@
     title = {The Magical container\_of() Macro},
     howpublished = {\url{http://radek.io/2012/11/10/magical-container_of-macro/}},
     note = {Online; accessed 30.4.2018} 
+}
+
+@misc{stats,
+    title = {Usage of operating systems for websites},
+    howpublished = {\url{https://w3techs.com/technologies/comparison/os-linux,os-windows}},
+    note = {Online; accessed 6.5.2018} 
 }
