--- a/includes/core.tex
+++ b/includes/core.tex
@@ -342,10 +342,10 @@ Takto vytvorený súborový deskriptor je možné použiť na zapisovanie alebo 
 
 Na druhej strane klient, ktorý chce odosielať a prijímať dáta cez soket potrebuje vytvoriť soket a následne zavolať funkciu \texttt{connect}. Táto funkcia má rovnakú signatúru ako funkcia \texttt{bind} a zabezpečuje pripojenie súborového deskriptora k soketu, ktorý je definovaný cestou \texttt{sun\_path} v štruktúre \texttt{sockaddr}, ktorá je druhým argumentom funkcie. Takto pripojený soket je možné používať pomocou vyššie spomínaných funkcii \texttt{send} a \texttt{recv}. Vytvorenie a používanie takéhoto klienta môžeme vidieť na ukážke kódu \ref{lst:client}.\cite{beej}
 
-\section{Medusa}
+\section{Medusa} \label{medusa}
 V 90. rokoch 20. storočia sa na Fakulte Elektrotechniky a Informatiky zrodil bezpečnostný systém Medusa. Tento bezpečnostný systém od svojho počiatku prešiel niekoľkými výraznými zmenami a v súčasnej podobe predstavuje bezpečnostnú politiku, ktorá funguje nad rámec základnej bezpečnosti v Linux(oprávnenia a skupiny). Tento bezpečnostný systém na svoje plnohodnotné fungovanie vyžaduje autorizačný systém, ktorý rozhoduje o povolení alebo zamietnutí nejakej akcie. Fungovanie tohto bezpečnostného riešenia v jadre systému Linux umožňuje \acrshort{lsm} framework, ktorý využívajú aj ostatné bezpečnostné riešenia ako napríklad \acrshort{SELinux}. Princíp fungovanie ako aj jednotlivé pojmy si vysvetlíme v nasledovný kapitolách.
 
-\subsection{\acrshort{lsm} framework}
+\subsection{\acrshort{lsm} framework} \label{lsm}
 \acrfull{lsm} framework poskytuje mechanizmus, ktorý umožňuje pripojiť nové bezpečnostné rozšírenie do jadra. Avšak v skutočnosti nejde o modul ako by sa mohlo z názvu zdať, nakoľko rozšírenia, ktoré chceme zakomponovať do jadra je potrebné vybrať počas kompilácie jadra za pomoci konfigurácie a možnosti \textit{CONFIG\_DEFAULT\_SECURITY}. Takto zakomponované bezpečnostné riešenie je následne možné vybrať počas načítavanie jadra pomocou argumentu \textit{security=...} v príkazovom riadku jadra.\cite{lsm}
 
 Bezpečnostné riešenia, ktoré chcú implementovať nejakú bezpečnostnú politiku sú závislé od funkcii, ktoré \acrshort{lsm} framework poskytuje. Tieto funkcie sú definované v hlavičkovom súbore \url{./include/linux/lsm_hooks.h} a predstavujú vstupný bod kde môže bezpečnostné riešenie definovať ľubovoľnú bezpečnostnú politiku. Tieto funkcie sú volané pri rôznych udalostiach, ktoré sa v jadre Linuxu vyskytnú. V prípade že bezpečnostné riešenie chce implementovať obsluhu takejto funkcie je potrebné použiť makro \textit{LSM\_HOOK\_INIT}, ktorého prvý parameter je názov funkcie \acrshort{lsm} frameworku a druhý parameter je obslužná funkcia v nami definovanom bezpečnostnom riešení.\cite{medusavilo} Tieto obslužné funkcie majú návratovú hodnotu typu \textit{int}, ktorá môže nadobudnúť nasledovné hodnoty:
