--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -1,12 +1,13 @@
-\newacronym{ipc}{IPC}{Inter-Process Communication}
-\newacronym{fifo}{FIFO}{First In, First Out}
-\newacronym{posix}{POSIX}{Portable Operating System Interface}
-\newacronym{rcu}{RCU}{Read-Copy-Update}
-\newacronym{pid}{PID}{Process Identifier}
-\newacronym{ram}{RAM}{Random Access Memory}
-\newacronym{vfs}{VFS}{Virtual File System}
-\newacronym{lsm}{LSM}{Linux Security Module}
-\newacronym{sem}{SEM}{Semaphore - semafór}
+\newacronym{os}{OS}{Operačný systém}
+\newacronym{ipc}{IPC}{Inter-Process Communication - medziprocesová komunikácia}
+\newacronym{fifo}{FIFO}{First In, First Out - vlastnosť, ktorá definuje, že poradie položiek, ktoré vstupujú je rovnaké, ako ktoré vychádzajú von}
+\newacronym{posix}{POSIX}{Portable Operating System Interface - rodina štandardov, ktorá zabezpečuje kompatibilitu medzi OS}
+\newacronym{rcu}{RCU}{Read-Copy-Update - synchronizačný mechanizmus}
+\newacronym{pid}{PID}{Process Identifier - identifikátor procesu}
+\newacronym{ram}{RAM}{Random Access Memory - pamäť s náhodným prístupom}
+\newacronym{vfs}{VFS}{Virtual File System - abstraktná vrstva súborového systému}
+\newacronym{lsm}{LSM}{Linux Security Module - framework, ktorý umožňuje použitie rôznych bezpečnostných politík}
+\newacronym{sem}{SEM}{Semaphore - semafor}
 \newacronym{shm}{SHM}{Shared Memory - zdieľaná pamäť}
 \newacronym{msg}{MSG}{Message queues - fronty správ}
 \newacronym{SELinux}{SELinux}{Security-Enhanced Linux - bezpečnostné riešenie, ktoré poskytuje bezpečnostnú politiku riadenia prístupu}
