--- a/includes/introduction.tex
+++ b/includes/introduction.tex
@@ -1,1 +1,5 @@
-Tu bude krasny uvod s diakritikou atd. \newline A mozno aj viac riadkovy uvod.
+Informačné technológie v dnešnej dobe predstavujú hardware a software, ktorý ukladá a spracováva najrôznejšie údaje o súkromných osobách, štátnych organizáciách a podobne. Ide o dôležité a citlivé dáta, ktoré je potrebné chrániť a preto sa rok čo rok kladie väčší dôraz na bezpečnosť informačných systémov. Podľa štatistiky skupiny \textit{W3Techs} až 67,9\% webových aplikácii používa Unix operačné systémy a z toho 60,8\% tvoria operačné systémy typu Linux.\cite{stats} Aj keď táto štatistika predstavuje len webové aplikácie a môže byť nepresná, ukazuje nám že operačné systémy typu Linux predstavujú významného hráča na trhu. Práve bezpečnosťou tohto \acrshort{os} sa zaoberá táto diplomová práca, konkrétne bezpečnostným systémom \textbf{Medusa}.
+
+Bezpečnostný systém Medusa, bol vyvinutý na FEI STU v rokov 1999-2002 a predstavuje rozšírenú bezpečnostnú politiku. Medusa využíva \acrshort{lsm} framework na zakomponovanie svojej bezpečnostnej politiky do jadra systému Linux rovnako ako ďalšie dostupné bezpečnostné systémy, ktoré sú napríklad SELinux, Apparmor alebo Tomoyo. Avšak Medusa na rozdiel od ostatných bezpečnostných systémov na svoje rozhodovanie používa autorizačný server, ktorý rozhoduje na základe konfiguračného súboru. Medusa taktiež obsahuje aj špeciálny systém virtuálnych svetov a umožňuje pomocou jedného autorizačného servera rozhodovať o viacerých systémoch súčasne. Princíp fungovania ako aj jednotlivé súčasti systému opisujeme v kapitole \ref{medusa}.
+
+Cieľom práce je rozšíriť bezpečnostný systém Medusa o kontrolu mechanizmov medziprocesovej komunikácie, ďalej len \acrshort{ipc} mechanizmy. Základné \acrshort{ipc} mechanizmy v operačnom systéme Linux si predstavíme v úvode práce spolu s použitím a internými štruktúrami niektorých z nich. Ďalej si v práci predstavíme spomínaný bezpečnostný systém Medusa a ďalej si opíšeme entity, ktoré bolo potrebné doplniť do tohto systému. Taktiež si ukážeme problémy a špecifické použitia \acrshort{ipc} mechanizmov, ktorým sme museli implementáciu prispôsobiť a v závere práce zhrnieme dosiahnuté výsledky. 
