--- a/includes/conclusion.tex
+++ b/includes/conclusion.tex
@@ -1,1 +1,4 @@
-Conclusion is going to be where? \newline Here.
+Cieľom práce bolo implementovať do bezpečnostného systému Medusa kontrolu \acrshort{ipc} mechanizmov. Úspešne sa nám podarilo implementovať do systému Medusa štruktúry a funkcie, ktoré zabezpečujú bezpečnostnú politiku pre \acrshort{ipc} mechanizmy System V semafor, System V zdieľanú pamäť a System V frontu správ. Ďalšie \acrshort{ipc} mechanizmy, ktoré sme opisovali v kapitole \ref{ipc}, taktiež majú svoje zastúpenie v Meduse buď ako \textit{inode hooky} alebo v prípade signálov ide o \acrshort{lsm} \textit{hook} \textit{kill}. Posledným neimplementovaným mechanizmom sú sokety, ktoré neboli primárnym cieľom práce a nepodarilo sa nám ich z časového hľadiska implementovať. 
+% Počas implementácie sme narazili na niektoré problémy, ktoré si vyžadovali s odstupom času zmenu implementácie.
+
+Paralelne s touto prácou sa na systéme Medusa implementovali aj úpravy, ktoré zabezpečujú súbežnú komunikáciu medzi systémom Medusa a autorizačným serverom. Preto bude nevyhnutné po aplikovaný týchto zmien mierne upraviť aj implementáciu tejto diplomovej práce. Do systému Medusa ďalej bude potrebné implementovať sokety a následne by Medusa mala obsahovať implementované hlavné \acrshort{lsm} \textit{hooky}. Takto definovaný bezpečnostný systém by následne mohol byť začlenený do hlavnej vetvy jadra systému Linux, avšak pred tým by sa musel upraviť aby spĺňal požiadavky, ktoré sa vyžadujú ako napríklad štýl písania kódu a podobne.
