--- a/includes/core.tex
+++ b/includes/core.tex
@@ -1,4 +1,4 @@
-\section{IPC}
+\section{IPC} \label{ipc}
 \acrfull{ipc} predstavuje súbor mechanizmov určených na komunikáciu a správu dát medzi viacerými procesmi. Operačný systém Linux obsahuje niekoľko takýchto mechanizmov, medzi najhlavnejšie patria:
 \begin{itemize}
 \item Signály
