--- a/includes/introduction.tex
+++ b/includes/introduction.tex
@@ -2,4 +2,4 @@ Informačné technológie v dnešnej dobe predstavujú hardware a software, ktor
 
 Bezpečnostný systém Medusa, bol vyvinutý na FEI STU v rokov 1999-2002 a predstavuje rozšírenú bezpečnostnú politiku. Medusa využíva \acrshort{lsm} framework na zakomponovanie svojej bezpečnostnej politiky do jadra systému Linux rovnako ako ďalšie dostupné bezpečnostné systémy, ktoré sú napríklad SELinux, Apparmor alebo Tomoyo. Avšak Medusa na rozdiel od ostatných bezpečnostných systémov na svoje rozhodovanie používa autorizačný server, ktorý rozhoduje na základe konfiguračného súboru. Medusa taktiež obsahuje aj špeciálny systém virtuálnych svetov a umožňuje pomocou jedného autorizačného servera rozhodovať o viacerých systémoch súčasne. Princíp fungovania ako aj jednotlivé súčasti systému opisujeme v kapitole \ref{medusa}.
 
-Cieľom práce je rozšíriť bezpečnostný systém Medusa o kontrolu mechanizmov medziprocesovej komunikácie, ďalej len \acrshort{ipc} mechanizmy. Základné \acrshort{ipc} mechanizmy v operačnom systéme Linux si predstavíme v úvode práce spolu s použitím a internými štruktúrami niektorých z nich. Ďalej si v práci predstavíme spomínaný bezpečnostný systém Medusa a ďalej si opíšeme entity, ktoré bolo potrebné doplniť do tohto systému. Taktiež si ukážeme problémy a špecifické použitia \acrshort{ipc} mechanizmov, ktorým sme museli implementáciu prispôsobiť a v závere práce zhrnieme dosiahnuté výsledky. 
+Cieľom práce je rozšíriť bezpečnostný systém Medusa o kontrolu mechanizmov medziprocesovej komunikácie, ďalej len \acrshort{ipc} mechanizmy, pričom sa primárne nebudeme zameriavať na \textit{sokety}. Základné \acrshort{ipc} mechanizmy v operačnom systéme Linux si predstavíme v úvode práce spolu s použitím a internými štruktúrami niektorých z nich. Ďalej si v práci predstavíme spomínaný bezpečnostný systém Medusa a entity, ktoré bolo potrebné doplniť do tohto systému. Taktiež si ukážeme problémy a špecifické použitia \acrshort{ipc} mechanizmov, ktorým sme museli implementáciu prispôsobiť a v závere práce zhrnieme dosiahnuté výsledky. 
