--- a/Implementácia kontroly IPC do systému Medusa.tex
+++ b/Implementácia kontroly IPC do systému Medusa.tex
@@ -19,8 +19,8 @@
 \FEIpdfInfo
 \FEIcover
 \FEItitlePage
-% \FEIassignment{includes/assignment.jpeg}
-% \FEIassignment{includes/assignment_part2.jpeg}
+\FEIassignment{includes/assignment-1.png}
+\FEIassignment{includes/assignment-2.png}
 \FEIabstract{includes/abstract}
 \FEIabstractEn{includes/abstractEN}
 \FEIthanks{includes/thanks}
