--- a/Implementácia kontroly IPC do systému Medusa.tex
+++ b/Implementácia kontroly IPC do systému Medusa.tex
@@ -3,8 +3,8 @@
 \FEIauthor{Viliam Mihálik}
 \FEItitle{Implementácia kontroly IPC do systému Medusa}
 \FEItitleEn{Implement IPC control on Medusa system}
-\FEIkeywords{Medusa, IPC, Linux, LSM}
-\FEIkeywordsEn{Medusa, IPC, Linux, LSM}
+\FEIkeywords{Medusa, IPC, Linux, LSM, mYstable}
+\FEIkeywordsEn{Medusa, IPC, Linux, LSM, mYstable}
 \FEIregNr{FEI-5384-72886}
 \FEIsupervisor{Mgr. Ing. Matúš Jókay, PhD.}
 
@@ -27,7 +27,6 @@
 \FEIcontent
 \FEIlistOfFiguresAndTables
 \FEIlistOfGlossaries
-\FEIlistOfAlgorithms
 \FEIlistOfListings
 
 \mainmatter
@@ -45,5 +44,5 @@
 
 \FEIlistOfAppendix
 \FEIappendix{Štruktúra elektronického nosiča\label{att:A}}{includes/attachmentA}
-\FEIappendix{Algoritmus\label{att:B}}{includes/attachmentB}
+\FEIappendix{Ukážky kódu\label{att:B}}{includes/attachmentB}
 \end{document}
