--- a/includes/attachmentA.tex
+++ b/includes/attachmentA.tex
@@ -1,1 +1,2 @@
 \file{/medusa.patch}{patch súbor, ktorý je možné aplikovať na jadro systému Linux verzie 4.15-rc8}
+\file{/Diplomova\_praca.pdf}{PDF súbor, ktorý obsahuje túto diplomovú prácu}
