--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -164,11 +164,11 @@
     author = {Radek Pazdera},
     title = {The Magical container\_of() Macro},
     howpublished = {\url{http://radek.io/2012/11/10/magical-container_of-macro/}},
-    note = {Online; accessed 30.4.2018} 
+    note = {Online; Navštívené 30.4.2018} 
 }
 
 @misc{stats,
     title = {Usage of operating systems for websites},
     howpublished = {\url{https://w3techs.com/technologies/comparison/os-linux,os-windows}},
-    note = {Online; accessed 6.5.2018} 
+    note = {Online; Navštívené 6.5.2018} 
 }
