--- a/includes/core.tex
+++ b/includes/core.tex
@@ -310,8 +310,7 @@ Soket predstavuje obojsmernú komunikačnú rúru, ktorá môže byť použitá 
 Soket sa vytvára pomocou funkcie \texttt{socket} a vytvorenie lokálneho soketu vyzerá nasledovne:
 \begin{lstlisting}[
   caption={Vytvorenie soketu},
-  label={lst:socket},
-  language=c,float,floatplacement=H
+  label={lst:socket}
 ]
 unsigned int s;
 s = socket(AF_UNIX, SOCK_STREAM, 0);
