--- a/includes/thanks.tex
+++ b/includes/thanks.tex
@@ -1,1 +1,1 @@
-Chcem sa poďakovať vedúcemu záverečnej práce, ktorým bol Mgr. Ing. Matúš Jókay, PhD., za odbornú pomoc a podporu ako aj cenné konzultácie, ktoré mi pomohli pri tvorbe tejto diplomovej práce.
+Chcem sa poďakovať vedúcemu záverečnej práce, ktorým bol Mgr. Ing. Matúš Jókay, PhD., za odbornú pomoc a podporu, ako aj cenné konzultácie, ktoré mi pomohli pri tvorbe tejto diplomovej práce.
