--- a/Implementácia kontroly IPC do systému Medusa.tex
+++ b/Implementácia kontroly IPC do systému Medusa.tex
@@ -2,7 +2,7 @@
 
 \FEIauthor{Viliam Mihálik}
 \FEItitle{Implementácia kontroly IPC do systému Medusa}
-\FEItitleEn{Implement IPC control on Medusa system}
+\FEItitleEn{IPC control in LSM Medusa}
 \FEIkeywords{Medusa, IPC, Linux, LSM, mYstable}
 \FEIkeywordsEn{Medusa, IPC, Linux, LSM, mYstable}
 \FEIregNr{FEI-5384-72886}
